Added google places autofill

--- a/templates/rideform.html
+++ b/templates/rideform.html
@@ -15,18 +15,17 @@
 <div class="container" id="customcontainerwidth" role="main">
 <!-- Why isn't placeholder text displaying -->
 
-<div class="well">
+<div class="well col-xs-8 col-md-12">
     Add flexible pickup window
 </div>
 
 <form action="/post-ride" method="post">
     <div class="form-group">
 
-        <fieldset>
             <div class="row">
-                <div class="col-xs-8">
+                <div class="col-lg-12">
                     <label for="seats">Seats Available</label>
-                    <div class="input-group">
+                    <div class="input-group col-xs-2">
                         <input type="text" class="form-control" id="seats" name="seats"
                         aria-describedby="seats" placedholder="Seats Available" required>
                     </div>
@@ -34,119 +33,41 @@
             </div>
 
             <br>
+
             <div class="row">
-                <div class="col-xs-8">
+                <div class="col-lg-12">
                     <label for="cost">Cost per Seat</label>
-                    <div class="input-group">
-                        <input type="text" class="form-control" id="cost" name="cost"
+                    <div class="input-group col-xs-2">
+                        <span class="input-group-addon">$</span>
+                        <input type="number" class="form-control" id="cost" name="cost"
                         aria-describedby="cost" placedholder="Ex: 15.00" required>
                     </div>
                 </div>
             </div>
 
-        </fieldset>
+            <br>
 
-        <fieldset>
-            <legend>Starting Address</legend>
-        <div class="row">
-            <div class="col-xs-8">
-                <label for="start-streetaddress">Street Address</label>
-                <div class="input-group">
-                    <input type="text" class="form-control" id="start-streetaddress" name="start-streetaddress"
-                    aria-describedby="start-streetaddress" placedholder="Address" required>
+            <div class="row">
+                <div class="col-lg-12">
+                    <label for="start-auto">Starting Point</label>
+                    <div class="input-group col-xs-6">
+                        <input type="text" class="form-control autocomplete" name="start-address"
+                        aria-describedby="start-streetaddress" placedholder="Address" required>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <br>
+            <br>
 
-         <div class="row">
-            <div class="col-xs-8">
-                <label for="start-city">City</label>
-                <div class="input-group">
-                    <input type="text" class="form-control" id="start-city" name="start-city"
-                    aria-describedby="start-city" placedholder="City" required>
+            <div class="row">
+                <div class="col-lg-12">
+                    <label for="start-auto">Ending Point</label>
+                    <div class="input-group col-xs-6">
+                        <input type="text" class="form-control autocomplete" name="start-address"
+                        aria-describedby="start-streetaddress" placedholder="Address" required>
+                    </div>
                 </div>
             </div>
-        </div>
-
-        <br>
-
-         <div class="row">
-            <div class="col-xs-8">
-                <label for="start-state">State</label>
-                <div class="input-group">
-                    <input type="text" class="form-control" id="start-state" name="start-state"
-                    aria-describedby="start-state" placedholder="State" required>
-                </div>
-            </div>
-        </div>
-
-        <br>
-
-         <div class="row">
-            <div class="col-xs-8">
-                <label for="start-zip">Zip</label>
-                <div class="input-group">
-                    <input type="text" class="form-control" id="start-zip" name="start-zip"
-                    aria-describedby="start-zip" placedholder="Zip" required>
-                </div>
-            </div>
-        </div>
-
-        </fieldset>
-
-        <fieldset>
-            <legend>Ending Address</legend>
-        <div class="row">
-            <div class="col-xs-8">
-                <label for="end-streetaddress">Street Address</label>
-                <div class="input-group">
-                    <input type="text" class="form-control" id="end-streetaddress" name="end-streetaddress"
-                    aria-describedby="end-streetaddress" placedholder="Address" required>
-                </div>
-            </div>
-        </div>
-
-         <br>
-
-         <div class="row">
-            <div class="col-xs-8">
-                <label for="end-city">City</label>
-                <div class="input-group">
-                    <input type="text" class="form-control" id="end-city" name="end-city"
-                    aria-describedby="end-city" placedholder="City" required>
-                </div>
-            </div>
-        </div>
-
-        <br>
-
-         <div class="row">
-            <div class="col-xs-8">
-                <label for="end-state">State</label>
-                <div class="input-group">
-                    <input type="text" class="form-control" id="end-state" name="end-state"
-                    aria-describedby="end-state" placedholder="State" required>
-                </div>
-            </div>
-        </div>
-
-        <br>
-
-        <br>
-
-         <div class="row">
-            <div class="col-xs-8">
-                <label for="end-zip">Zip</label>
-                <div class="input-group">
-                    <input type="text" class="form-control" id="end-zip" name="end-zip"
-                    aria-describedby="end-zip" placedholder="Zip" required>
-                </div>
-            </div>
-        </div>
-        </fieldset>
-
 
         <fieldset>
             <legend>When will you leave and Arrive?</legend>
@@ -154,7 +75,7 @@
                     <div class='col-md-5'>
                         <div class="form-group">
                             <div class='input-group date' id='datetimepicker6'>
-                                <input type='text' name='date' class="form-control" />
+                                <input type='text' name='date1' class="form-control" />
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-calendar"></span>
                                 </span>
@@ -164,7 +85,7 @@
                     <div class='col-md-5'>
                         <div class="form-group">
                             <div class='input-group date' id='datetimepicker7'>
-                                <input type='text' name='date' class="form-control" />
+                                <input type='text' name='date2' class="form-control" />
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-calendar"></span>
                                 </span>
@@ -174,6 +95,7 @@
                 </div>
         </fieldset>
 
+        <br>
 
         <fieldset>
             <legend>Details</legend>
@@ -228,8 +150,52 @@
             });
         });
 
-        
+
     </script>
+    <script>
+
+      var placeSearch, autocomplete;
+      var locations = document.getElementsByClassName('autocomplete');
+
+      function initAutocomplete() {
+        // Create the autocomplete object, restricting the search to geographical
+        // location types.
+
+        for (i=0; i < locations.length; i++) {
+
+            autocomplete = new google.maps.places.Autocomplete(
+                        locations[i]);
+
+            function geolocate() {
+                if (navigator.geolocation) {
+                  navigator.geolocation.getCurrentPosition(function(position) {
+                    var geolocation = {
+                      lat: position.coords.latitude,
+                      lng: position.coords.longitude
+                    };
+                    var circle = new google.maps.Circle({
+                      center: geolocation,
+                      radius: position.coords.accuracy
+                    });
+                    autocomplete.setBounds(circle.getBounds());
+                  });
+                }
+              }
+        }
+
+      }
+
+
+      console.log(autocomplete);
+
+      // Bias the autocomplete object to the user's geographical location,
+      // as supplied by the browser's 'navigator.geolocation' object.
+      
+    </script>
+
+    <script type="text/javascript" src="secrets.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key="+secrets['google']+"&libraries=places&callback=initAutocomplete"
+        async defer></script>
 
 
 
