Adjusted auto complete. Still not pulling in address data via .getPlace

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,11 +9,8 @@
     <h1>Find your next Seat</h1>
 </div>
 <div class="well">
-    Enter a starting and ending destination to look for rides.
+    Enter a starting and ending destination to look for rides. TODO: Add autocomplete!! Just click 'All Rides for now'
 </div>
-
-
-
 
 
 <form action="/search">
