Added autocomplete to the search terms. Pulls in lat/lng, searches db for rides starting/ending within x miles around search lat/lng. Need to update to search a circular radius.

--- a/templates/search.html
+++ b/templates/search.html
@@ -2,6 +2,23 @@
 
 {% block Title %} Home {% endblock %}
 
+{% block head %} 
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+<!-- moment js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>   
+<!-- bootstrap datepicker -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.css"/>
+
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBm2Vj5UTzzCPn_6ZYRQxOT55U3PtKXgQ&libraries=places&callback=initAutocomplete" async defer></script>
+
+<!-- 
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBm2Vj5UTzzCPn_6ZYRQxOT55U3PtKXgQ&libraries=places" async defer></script>
+ -->
+
+{% endblock %}
+
 {% block content %}
 <div class="well">
     To Do:
@@ -15,19 +32,130 @@
             <div class="col-xs-12 col-sm-6">
                 <div class="input-group">
                     <label for="starting">Starting Destination</label>
-                    <input type="text" class="form-control" id="starting" name="starting" 
+                    <input type="text" class="form-control" id="autocomplete"name="start-address"
                     aria-describedby="starting destination" placeholder="Enter Starting Location" required>
                 </div>
+            </div>
+            <div>
+               <!--  <input type="text" id="street_number" name="street_number"></input>
+                <input type="text" id="route" name="route"></input> -->
+                <input type="text" id="locality" name="locality"></input>
+                <input type="text" id="administrative_area_level_1" name="administrative_area_level_1"></input>
+                <input type="text" id="postal_code" name="postal_code"></input>
+                <input type="text" id="lat" name="lat"></input>
+                <input type="text" id="lng" name="lng"></input>        
             </div>
 
             <div class="col-xs-12 col-sm-6">
                 <div class="input-group">
                     <label for="ending">Ending Destination</label>
-                    <input type="text" class="form-control" id="ending" name="ending" 
+                    <input type="text" class="form-control" id="autocomplete2" name="end-address"
                     aria-describedby="ending destination" placeholder="Enter Ending Location" required>
                 </div>
             </div>
+            <div>
+                   <!--  <input type="text" id="street_number2" name="street_number"></input>
+                    <input type="text" id="route2" name="route2"></input> -->
+                    <input type="text" id="locality2" name="locality2"></input>
+                    <input type="text" id="administrative_area_level_12" name="administrative_area_level_1_2"></input>
+                    <input type="text" id="postal_code2" name="postal_code2"></input>
+                    <input type="text" id="lat2" name="lat2"></input>
+                    <input type="text" id="lng2" name="lng2"></input>
+                </div>
         </div>
+        <script>
+            var placeSearch, autocomplete, autocomplete2;
+
+      var componentForm = {
+        // street_number: 'long_name',
+        // route: 'long_name',
+        locality: 'long_name',
+        administrative_area_level_1: 'short_name',
+        postal_code: 'short_name'
+      };
+
+       var options = {
+          types: ['(cities)'],
+          componentRestrictions: {country: "us"}
+         };
+
+      function initAutocomplete() {
+        // Create the autocomplete object, restricting the search to geographical
+        // location types.
+        autocomplete = new google.maps.places.Autocomplete(
+            /** @type {!HTMLInputElement} */
+            (document.getElementById('autocomplete')), options);
+
+        autocomplete.addListener('place_changed', function() {
+            fillInAddress(autocomplete, "");
+        });
+
+        autocomplete2 = new google.maps.places.Autocomplete(
+            /** @type {!HTMLInputElement} */
+            (document.getElementById('autocomplete2')), options); // what does ** @type mean
+
+        // When the user selects an address from the dropdown, populate the address
+        // fields in the form.
+        
+        autocomplete2.addListener('place_changed', function() {
+            fillInAddress(autocomplete2, "2");
+        });               // look up the place_changed listener
+      
+      }
+
+      function fillInAddress(autocomplete, unique) {
+        // Get the place details from the autocomplete object.
+
+        var place = autocomplete.getPlace();
+
+        for (var component in componentForm) {
+          if(!!document.getElementById(component + unique)) {
+            document.getElementById(component + unique).value = '';
+          // document.getElementById(component).disabled = false;
+        }
+    }
+
+        // Get each component of the address from the place details
+        // and fill the corresponding field on the form.
+        for (var i = 0; i < place.address_components.length; i++) {
+          var addressType = place.address_components[i].types[0];
+          if (componentForm[addressType] && document.getElementById(addressType + unique)) {
+            var val = place.address_components[i][componentForm[addressType]];
+            document.getElementById(addressType + unique).value = val;
+        }
+        }
+
+        if (place.geometry.location) {
+            var lat = place.geometry.location.lat()
+            document.getElementById('lat' + unique).value = lat;
+            var lng = place.geometry.location.lng()
+            document.getElementById('lng' + unique).value = lng;
+        }
+      }
+
+      // google.maps.event.addDomListener(window, "load", initAutocomplete);
+
+      function geolocate() {
+                if (navigator.geolocation) {
+                  navigator.geolocation.getCurrentPosition(function(position) {
+                    var geolocation = {
+                      lat: position.coords.latitude,
+                      lng: position.coords.longitude
+                    };
+                    var circle = new google.maps.Circle({
+                      center: geolocation,
+                      radius: position.coords.accuracy
+                    });
+                    autocomplete.setBounds(circle.getBounds());
+                  });
+                }
+              }
+
+      // Bias the autocomplete object to the user's geographical location,
+      // as supplied by the browser's 'navigator.geolocation' object.
+      
+
+        </script>
 
         <br>
         <!-- submit button -->
