Adjusting HTML Search Page: unhid input fields

--- a/templates/search.html
+++ b/templates/search.html
@@ -39,11 +39,11 @@
             <div>
                <!--  <input type="text" id="street_number" name="street_number"></input>
                 <input type="text" id="route" name="route"></input> -->
-                <input type="text" id="locality" name="locality"></input>
-                <input type="text" id="administrative_area_level_1" name="administrative_area_level_1"></input>
-                <input type="text" id="postal_code" name="postal_code"></input>
-                <input type="text" id="lat" name="lat"></input>
-                <input type="text" id="lng" name="lng"></input>        
+                <input type="hidden" id="locality" name="locality"></input>
+                <input type="hidden" id="administrative_area_level_1" name="administrative_area_level_1"></input>
+                <input type="hidden" id="postal_code" name="postal_code"></input>
+                <input type="hidden" id="lat" name="lat"></input>
+                <input type="hidden" id="lng" name="lng"></input>        
             </div>
 
             <div class="col-xs-12 col-sm-6">
@@ -56,11 +56,11 @@
             <div>
                    <!--  <input type="text" id="street_number2" name="street_number"></input>
                     <input type="text" id="route2" name="route2"></input> -->
-                    <input type="text" id="locality2" name="locality2"></input>
-                    <input type="text" id="administrative_area_level_12" name="administrative_area_level_1_2"></input>
-                    <input type="text" id="postal_code2" name="postal_code2"></input>
-                    <input type="text" id="lat2" name="lat2"></input>
-                    <input type="text" id="lng2" name="lng2"></input>
+                    <input type="hidden" id="locality2" name="locality2"></input>
+                    <input type="hidden" id="administrative_area_level_12" name="administrative_area_level_1_2"></input>
+                    <input type="hidden" id="postal_code2" name="postal_code2"></input>
+                    <input type="hidden" id="lat2" name="lat2"></input>
+                    <input type="hidden" id="lng2" name="lng2"></input>
                 </div>
         </div>
         <script>
