--- a/templates/search.html
+++ b/templates/search.html
@@ -20,56 +20,183 @@
 {% endblock %}
 
 {% block content %}
-<div class="well">
+<div class="container">
+  <div class="well">
     To Do:
-    - Don't show rides you are the driver for!!! Or indicate them in some way
-</div>
-<form action="/search">
-<div class="row form-inline">
-        <fieldset>
+    - Don't show rides you are the driver for!!!
+    - Adjust enter stroke for search
+    - Sync of reverse button
+  </div>
 
-            <div class="col-md-12">
-                <label for="start-address">Enter Your Destination</label>
-            </div>
+  <form action="/search">
+    <div class="row form-inline">
+      <fieldset>
 
+        <div class="col-md-12">
+          <label for="start-address">Enter Your Destination</label>
+        </div>
 
-            <div class="form-group">
-                <input type="text" class="form-control" id="autocomplete" name="start-address"
-                    aria-describedby="starting destination" placeholder="Enter Starting Location" required>
-                <div>
-                   <!--  <input type="text" id="street_number" name="street_number"></input>
-                    <input type="text" id="route" name="route"></input> -->
-                    <input type="hidden" id="locality" name="locality"></input>
-                    <input type="hidden" id="administrative_area_level_1" name="administrative_area_level_1"></input>
-                    <input type="hidden" id="postal_code" name="postal_code"></input>
-                    <input type="hidden" id="lat" name="lat"></input>
-                    <input type="hidden" id="lng" name="lng"></input>        
-                </div>
-            </div>
+        <div class="form-group">
+          <input type="text" class="form-control" id="autocomplete" name="start-address"
+            aria-describedby="starting destination" placeholder="Enter Starting Location" required>
 
-            <div class="form-group">
-                <span class="glyphicon glyphicon-transfer" aria-hidden="true"></span>
-            </div>
+          <div>
+           <!--  <input type="text" id="street_number" name="street_number"></input>
+            <input type="text" id="route" name="route"></input> -->
+            <input type="hidden" id="locality" name="locality"></input>
+            <input type="hidden" id="administrative_area_level_1" name="administrative_area_level_1"></input>
+            <input type="hidden" id="postal_code" name="postal_code"></input>
+            <input type="hidden" id="lat" name="lat"></input>
+            <input type="hidden" id="lng" name="lng"></input>        
+          </div>
 
-            <div class="form-group">
-                <input aria-label type="text" class="form-control" id="autocomplete2" name="end-address"
-                aria-describedby="ending destination" placeholder="Enter Ending Location" required> 
-                <div>
-                   <!--  <input type="text" id="street_number2" name="street_number"></input>
-                    <input type="text" id="route2" name="route2"></input> -->
-                    <input type="hidden" id="locality2" name="locality2"></input>
-                    <input type="hidden" id="administrative_area_level_12" name="administrative_area_level_1_2"></input>
-                    <input type="hidden" id="postal_code2" name="postal_code2"></input>
-                    <input type="hidden" id="lat2" name="lat2"></input>
-                    <input type="hidden" id="lng2" name="lng2"></input>
-                </div>             
-            </div>
-        <!-- submit button -->
-        <button type="submit" class="btn btn-primary" style="display:none">Submit</button>
+        </div>
+
+        <div class="form-group">
+          <span class="glyphicon glyphicon-transfer" aria-hidden="true"></span>
+        </div>
+
+        <div class="form-group">
+          <input aria-label type="text" class="form-control" id="autocomplete2" name="end-address"
+          aria-describedby="ending destination" placeholder="Enter Ending Location" required> 
+          <div>
+             <!--  <input type="text" id="street_number2" name="street_number"></input>
+              <input type="text" id="route2" name="route2"></input> -->
+              <input type="hidden" id="locality2" name="locality2"></input>
+              <input type="hidden" id="administrative_area_level_12" name="administrative_area_level_1_2"></input>
+              <input type="hidden" id="postal_code2" name="postal_code2"></input>
+              <input type="hidden" id="lat2" name="lat2"></input>
+              <input type="hidden" id="lng2" name="lng2"></input>
+          </div>             
+        </div>
+
+    <!-- submit button -->
+      <button type="submit" class="btn btn-primary" style="display:none">Submit</button>
+
+      </fieldset>
     </div>
+  </form>
 
-        </fieldset>
-        </form>
+  <br>
+
+  <div class="well row col-xs-12">
+    <span class="col-xs-4">Toggle Date</span>
+    <span class="col-xs-4">Toggle Pickup Time</span>
+    <span class="col-xs-4">Toggle Price</span>
+  </div>
+
+  <br>
+
+  <table class="table table-hover">
+
+    <tbody>
+      <tr> 
+        <td class="col-xs-2" style="padding-right:20px; border-right: 1px solid #ccc;">
+          <div class="row">
+            <img class="img-responsive" src="https://65.media.tumblr.com/avatar_66b336c742ea_128.png" alt="driver image" width="100" height="100">
+          </div>
+
+          <div class="row">
+            <div>
+              Driver Name
+            </div>
+            <div>
+              <button>Request</button>
+            </div>
+          </div>
+        </td>
+
+        <td class="col-xs-8" style="padding-right:20px; padding-left:20px; border-right: 1px solid #ccc;">
+          <div class="row">
+            Date: Tomorrow
+          </div>
+
+          <div class="row">
+            route --> route
+          </div>
+
+          <div class="row">
+            <span class="glyphicon glyphicon-unchecked" style="color:green"></span>
+            <span>Starting Location</span>
+          </div>
+
+          <div class="row">
+            <span class="glyphicon glyphicon-unchecked" style="color:red"></span><span>Ending Location</span>
+          </div>
+        </td>
+
+        <td class="col-xs-2" style="padding-left:20px;">
+          <div class="row">
+            <span class="glyphicon glyphicon-usd"></span><span>15</span>
+          </div>
+
+          <div class="row">
+          per passenger
+          </div>
+
+          <div class="row">
+            <span class="glyphicon glyphicon-heart" title="Detours"></span>
+            <span class="glyphicon glyphicon-start" title="Luggage"></span>
+            <span class="glyphicon glyphicon-start-empty" title="Flexible pickup"></span>
+          </div>
+        </td>
+      </tr>
+
+      
+    </tbody>
+  </table>
+
+    <table class="table table-hover">
+
+  {% if rides %}
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Driver</th>
+          <th>From</th>
+          <th>Time</th>
+          <th>To</th>
+          <th>Time</th>
+          <th>Seats</th>
+          <th>Cost</th>
+          <th>Request</th>
+        </tr>
+      </thead>
+      <tbody>
+      {% for ride in rides %}
+        <tr>
+          <td>{{ ride.start_timestamp.strftime('%Y-%m-%d') }}</td>
+          <td>{{ ride.user.first_name }} {{ ride.user.last_name }}</td>
+          <td>{{ ride.start_city }}, {{ ride.start_state }}</td>
+          <td>{{ ride.start_timestamp.strftime('%H:%M')}}</td>
+          <td>{{ ride.end_city }}, {{ ride.end_state }}</td>
+          <td>{{ ride.end_timestamp.strftime('%H:%M')}}</td>
+          <td>{{ ride.seats }}</td>
+          <td>{{ ride.cost }}</td>
+          <td>
+              <form action="/request-seats" method="POST">
+                  <select name='seats'>
+                      {% for i in range(ride.seats) %}
+                      <option value={{ i+1 }}>{{ i+1 }}</option>
+                      {% endfor %}
+                  </select>
+                  <input type="hidden" name="ride_id" value={{ride.ride_id}}></input>
+                  <input type="submit" value="Request Seats">
+              </form>
+
+          </td>
+        </tr>
+      {% endfor %}
+      </tbody>
+    </table>
+
+  {% else %}
+
+  <p>No upcoming rides for that search</p>
+
+  {% endif %}
+  </div></div>
+    
 
 <script>
             var placeSearch, autocomplete, autocomplete2;
@@ -167,58 +294,7 @@
 
 
 
-<div class="container">
-    <table class="table table-hover">
-    <h2>Upcoming Rides</h2>
 
-{% if rides %}
-    <thead>
-      <tr>
-        <th>Date</th>
-        <th>Driver</th>
-        <th>From</th>
-        <th>Time</th>
-        <th>To</th>
-        <th>Time</th>
-        <th>Seats</th>
-        <th>Cost</th>
-        <th>Request</th>
-      </tr>
-    </thead>
-    <tbody>
-    {% for ride in rides %}
-      <tr>
-        <td>{{ ride.start_timestamp.strftime('%Y-%m-%d') }}</td>
-        <td>{{ ride.user.first_name }} {{ ride.user.last_name }}</td>
-        <td>{{ ride.start_city }}, {{ ride.start_state }}</td>
-        <td>{{ ride.start_timestamp.strftime('%H:%M')}}</td>
-        <td>{{ ride.end_city }}, {{ ride.end_state }}</td>
-        <td>{{ ride.end_timestamp.strftime('%H:%M')}}</td>
-        <td>{{ ride.seats }}</td>
-        <td>{{ ride.cost }}</td>
-        <td>
-            <form action="/request-seats" method="POST">
-                <select name='seats'>
-                    {% for i in range(ride.seats) %}
-                    <option value={{ i+1 }}>{{ i+1 }}</option>
-                    {% endfor %}
-                </select>
-                <input type="hidden" name="ride_id" value={{ride.ride_id}}></input>
-                <input type="submit" value="Request Seats">
-            </form>
-
-        </td>
-      </tr>
-    {% endfor %}
-    </tbody>
-  </table>
-
-{% else %}
-
-<p>No upcoming rides for that search</p>
-
-{% endif %}
-</div>
 
 {% endblock %}
 
